# paccy

./: .gitignore  CMakeLists.txt  PKGBUILD  paccy.desktop  paccy.xml
.github/workflows/: nightly.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h
